tests/baselines/reference/unusedNamespaceInModule.errors.txt
unusedNamespaceInModule.ts(2,15): error TS6133: 'B' is declared but its value is never read.


==== unusedNamespaceInModule.ts (1 errors) ====
    module A {
        namespace B { }
                  ~
!!! error TS6133: 'B' is declared but its value is never read.
        export namespace C {}
    }